<resources>
    <string name="app_name" translatable="false">Bomber</string>

    <string name="repeats">Repeats</string>
    <string name="start_attack">Start attack</string>

    <string name="phone_error">Invalid number format</string>

    <string name="time_is_incorrect">Time is incorrect</string>
    <string name="scheduled_hint">Hold down the <b>«Start attack»</b> button to plan your attack</string>

    <string name="donate">Donate</string>
    <string name="proxy">Proxy</string>
    <string name="source_code">Source code</string>
    <string name="waiting">Waiting</string>

    <string name="save">Save</string>
    <string name="proxy_format_error">Invalid proxy format</string>
    <string name="limit_reached">Limit reached</string>

    <string name="proxy_hint" translatable="false">ip:port login:password</string>

    <string name="channel_description">Attack progress</string>
    <string name="attack">Attack</string>
    <string name="stop">Stop</string>

    <string name="update_available">Update available</string>
    <string name="download">Download</string>
    <string name="update">Update</string>

    <string name="telegram_link" translatable="false">t.me/androidsmsbomber</string>

    <string name="toast" translatable="false">O⁠_⁠o wavecat</string>
    <string name="enable_snowfall">Enable snowfall</string>
    <string name="disable_snowfall">Disable snowfall</string>

    <string name="notification_permission">Please grant Notification permission from App Settings</string>

    <string name="disable_default_services">Disable standard services for testing</string>
    <string name="apply">Apply</string>
    <string name="services_warning">Before you enable additional services, you will have to familiarize yourself with the source. Be careful, the services may contain malicious Web sites that could disrupt the bomber and expose sensitive data. Do not send error messages if you have this option enabled</string>
    <string name="enter_source">Enter the links to the sources</string>
    <string name="remote_services">Remote Services</string>
    <string name="services">Services</string>

    <string name="speed"><b>Attack speed adjustment</b>, the higher the speed, the less time it takes to attack</string>
    <string name="slow">Slow</string>
    <string name="defaults">Default</string>
    <string name="fast">Fast</string>

    <string name="skip">Skip (%1$dsec)</string>

    <string-array name="hints" translatable="false">
        <item>912 345 67 89</item>
        <item>50 123 4567</item>
        <item>29 123 4567</item>
        <item>172 745317</item>
        <item>1 202 555 0135</item>
    </string-array>
</resources>